--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,66 @@
+html,
+body {
+  font-family: 'Amatic SC', cursive;
+}
+
+.header {
+  text-align: center;
+}
+
 h1 {
-    color: #787878;
+  color: #787878;
+}
+
+.panels {
+  display: flex;
+  height: 100vh;
+  overflow: hidden;
+  flex-flow: row nowrap;
+}
+
+.panel {
+  background: #6b0f9c;
+  box-shadow: inset 0 0 0 5px rgba(255, 255, 255, 0.1);
+  color: white;
+  text-align: center;
+  align-items: center;
+  transition: font-size 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11), flex 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11), bakground 0.2s;
+  background-position: center;
+  background-size: cover;
+  font-size: 20px;
+  flex-basis: 0;
+  flex-grow: 1;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-around;
+  p {
+    text-transform: uppercase;
+    text-shadow: 0 0 4px rgba(0, 0, 0, 0.72) rgba(0, 0, 0, 0.45);
+    font-size: 2em;
+    &:first-child {
+      transform: translateY(-300%);
+      transition: .2s;
+    }
+    &:last-child {
+      transform: translateY(300%);
+      transition: .2s;
+    }
+  }
+}
+
+.panel:focus {
+  font-size: 20px;
+  flex-grow: 5;
+  outline: none;
+  p {
+    &:first-child,
+    &:last-child {
+      transform: translateY(0%);
+    }
+  }
+}
+
+*:after,
+*:before {
+  box-sizing: inherit;
 }
